skins/oasis/css/core/LocalNavigation.scss
/*
LOCAL NAVIGATION
*/

.WikiHeaderV2 {
	height: 80px;
	position: relative;
	z-index: 3900000;
}
.WikiHeaderV2 .local-navigation-container {
	width: 1140px;
	margin: 0 auto;
}
.WikiHeaderV2 .wordmark {
	color: mix(red, green);
	float: left;
	height: 40px;
	margin: 0;
	padding: 20px 20px 20px 0;
	font-size: 30px;
	font-weight: bold;
}
.WikiHeaderV2 .wordmark img {
	max-height: 40px;
	max-width: 154px;
}
.WikiHeaderV2 .wordmark.text a {
	display: inline-block;
	font-size: 20px;
	font-weight: bold;
	padding: 10px 0;
}
.WikiHeaderV2 .wordmark.text a:hover {
	text-decoration: none;
}

.WikiNavV2 {
	float: left;
	max-width: 846px;
}
.WikiNavV2 .nav {
	display: inline-block;
}
.WikiNavV2 .subnav-2 {
	overflow: hidden;
}
.WikiNavV2 .nav .nav-item {
	display: inline-block;
}
.WikiNavV2 .nav .nav-item > a {
	display: table-cell;
	font-size: 15px;
	font-weight: bold;
	height: 80px;
	padding: 0 20px;
	text-decoration: none;
	vertical-align: middle;
}
.WikiNavV2 .nav .nav-item:hover .submenu, .WikiNavV2 .nav .nav-item:active .submenu, .WikiNavV2 .nav .nav-item.active .submenu {
	display: block;
}
.WikiNavV2 .nav .nav-item.nav-item-narrow:nth-child(n + 3) {
	direction: rtl;
}
.WikiNavV2 .nav .nav-item.nav-item-narrow:nth-child(n + 3) .submenu {
	direction: ltr;
}
.WikiNavV2 .nav .nav-item.no-see-all .submenu {
	padding-bottom: 5px;
}
.WikiNavV2 .nav .nav-item .submenu {
	display: none;
	padding: 30px 20px 0 0;
	position: absolute;
}
.WikiNavV2 .nav .nav-item .submenu.submenu-width-2 {
	width: 500px;
}
.WikiNavV2 .nav .nav-item .submenu.submenu-full {
	box-sizing: border-box;
	left: 50%;
	margin-left: -570px;
	width: 1140px;
}
.WikiNavV2 .nav .nav-item .subnav-2-column-wrapper {
	float: left;
	display: block;
	margin-right: 30px;
}
.WikiNavV2 .nav .nav-item .submenu.submenu-wide {
	box-sizing: border-box;
	left: 50%;
	margin-left: -395px;
	width: 790px;
}
.WikiNavV2 .nav .nav-item .submenu a {
	color: inherit;
	text-decoration: none;
}
.WikiNavV2 .nav .nav-item .submenu a:hover {
	text-decoration: underline;
}
.WikiNavV2 .nav .nav-item .submenu .subnav-2a {
	box-sizing: border-box;
	display: inline-block;
	font-size: 15px;
	font-weight: bold;
	line-height: 16px;
	position: relative;
	text-transform: uppercase;
}
.subnav-2a svg {
	margin-top: -5px;
	padding-left: 10px;
	position: absolute;
	right: -20px;
	top: 50%;
}
.WikiNavV2 .nav .nav-item .submenu li.subnav-2-item {
	margin: 0 20px 35px;
}
.WikiNavV2 .nav .nav-item .submenu li.subnav-2-item:nth-child(5) {
	clear: left;
}
.WikiNavV2 .nav .nav-item .submenu .subnav-3a {
	font-size: 15px;
	font-weight: normal;
}
.WikiNavV2 .nav .nav-item .submenu ul.subnav-3 {
	margin-top: 15px;
}
.WikiNavV2 .nav .nav-item .submenu li.subnav-3-item {
	margin-top: 12px;
}
.WikiNavV2 .nav .nav-item .submenu .see-all {
	bottom: 0;
	font-size: 15px;
	font-weight: bold;
	height: 75px;
	line-height: 75px;
	padding-right: 20px;
	text-align: right;
	text-transform: uppercase;
}
.WikiNavV2 .nav .nav-item .submenu .see-all:before {
	clear: both;
}
.WikiNavV2 .nav .nav-item .submenu .see-all svg {
	margin-left: 10px;
}
#WikiaPageHeader.WikiaPageHeader.WikiaPageHeaderV2 {
	margin: 10px 0;
}
.WikiNavV2 > h1, .WikiNavV2 > .navbackground {
	display: none;
}
.WikiHeaderV2 .hiddenLinks {
	position: absolute;
	top: -1000px;
}

@media screen and (max-width: 1365px) and (min-width: 1024px) {
	.WikiHeaderV2 .local-navigation-container {
		width: 830px;
	}
	.WikiHeaderV2 .local-navigation-container .wordmark {
		padding-right: 18px;
	}
	.WikiNavV2 {
		max-width: 613px;
	}
	.WikiNavV2 .nav .nav-item > a {
		font-size: 15px;
		font-weight: bold;
		padding: 0 18px;
	}
	.WikiNavV2 .nav .nav-item .submenu {
		padding-top: 30px;
	}
	.WikiNavV2 .nav .nav-item .submenu.submenu-width-2 {
		width: 368px;
	}
	.WikiNavV2 .nav .nav-item .submenu.submenu-full {
		margin-left: -415px;
		width: 830px;
	}
	.WikiNavV2 .nav .nav-item .subnav-2-column-wrapper {
		width: 139px;
	}
	.WikiNavV2 .nav .nav-item .subnav-2-column .subnav-2-item {
		float: none;
	}
	.WikiNavV2 .nav .nav-item .subnav-2-column {
		width: 139px;
	}
	.WikiNavV2 .nav .nav-item .submenu.submenu-wide {
		margin-left: -204px;
		width: 613px;
	}
	.WikiNavV2 .nav .nav-item .submenu .subnav-2a {
		line-height: 20px;
		padding-bottom: 10px;
		max-width: 110px;
	}
	.WikiNavV2 .nav .nav-item .submenu li.subnav-2-item {
		margin: 0 12px 30px;
		width: 139px;
	}
	.WikiNavV2 .nav .nav-item .submenu .subnav-3a {
		font-size: 15px;
		font-weight: normal;
		line-height: 20px;
		word-break: break-word;
	}
	.WikiNavV2 .nav .nav-item .submenu ul.subnav-3 {
		margin-top: 10px;
	}
	.WikiNavV2 .nav .nav-item .submenu li.subnav-3-item {
		margin-top: 10px;
	}
	.WikiNavV2 .nav .nav-item .submenu .see-all {
		font-size: 15px;
	}
	.WikiNavV2 .nav .nav-item .submenu .see-all svg {
		margin-left: 10px;
	}
	.subnav-2a svg {
		margin-top: -10px;
	}
}

@media screen and (max-width: 1023px) {
	.WikiHeaderV2 .local-navigation-container {
		width: 768px;
		margin: 0 auto;
	}
	.WikiNavV2 {
		max-width: 596px;
	}
	.WikiNavV2 .nav .nav-item .subnav-2-column-wrapper {
		width: 159px;
	}
	.WikiNavV2 .nav .nav-item .submenu.submenu-full,
	.WikiNavV2 .nav .nav-item .submenu.submenu-wide {
		box-sizing: -webkit-border-box;
		box-sizing: border-box;
		left: 50%;
		margin-left: -384px;
		width: 768px;
	}
	.WikiNavV2 .nav .nav-item .submenu .subnav-2a {
		max-width: 130px;
	}
	.WikiNavV2 .nav .nav-item > a {
		padding: 0 15px;
	}
}

