CON-1251 fix not centered elements

--- a/skins/oasis/css/core/LocalNavigation.scss
+++ b/skins/oasis/css/core/LocalNavigation.scss
@@ -42,7 +42,10 @@ LOCAL NAVIGATION
 	display: inline-block;
 }
 .WikiNavV2 .subnav-2 {
+	display: table;
+	margin: 0 auto;
 	overflow: hidden;
+	text-align: center;
 }
 .WikiNavV2 .nav .nav-item {
 	display: inline-block;
@@ -83,9 +86,11 @@ LOCAL NAVIGATION
 	width: 1140px;
 }
 .WikiNavV2 .nav .nav-item .subnav-2-column-wrapper {
+	display: inline-block;
 	float: left;
-	display: block;
-	margin-right: 30px;
+	margin: 0 30px;
+	text-align: left;
+	width: 160px;
 }
 .WikiNavV2 .nav .nav-item .submenu.submenu-wide {
 	box-sizing: border-box;
@@ -117,7 +122,8 @@ LOCAL NAVIGATION
 	top: 50%;
 }
 .WikiNavV2 .nav .nav-item .submenu li.subnav-2-item {
-	margin: 0 20px 35px;
+	margin-bottom: 35px;
+	width: 160px;
 }
 .WikiNavV2 .nav .nav-item .submenu li.subnav-2-item:nth-child(5) {
 	clear: left;
@@ -204,7 +210,7 @@ LOCAL NAVIGATION
 	}
 	.WikiNavV2 .nav .nav-item .submenu li.subnav-2-item {
 		margin: 0 12px 30px;
-		width: 139px;
+		width: 138px;
 	}
 	.WikiNavV2 .nav .nav-item .submenu .subnav-3a {
 		font-size: 15px;
@@ -237,7 +243,8 @@ LOCAL NAVIGATION
 	.WikiNavV2 {
 		max-width: 596px;
 	}
-	.WikiNavV2 .nav .nav-item .subnav-2-column-wrapper {
+	.WikiNavV2 .nav .nav-item .subnav-2-column-wrapper,
+	.WikiNavV2 .nav .nav-item .submenu li.subnav-2-item {
 		width: 159px;
 	}
 	.WikiNavV2 .nav .nav-item .submenu.submenu-full,
